--- a/niggainternal_fix_1_0.vcxproj
+++ b/niggainternal_fix_1_0.vcxproj
@@ -166,6 +166,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="fmt\core.h" />
+    <ClInclude Include="fmt\format.h" />
     <ClInclude Include="heccinhek/CLocalPlayer.h" />
     <ClInclude Include="heccinhek/CPlayer.h" />
     <ClInclude Include="haze/csgo.h" />
