--- a/niggainternal_fix_1_0.vcxproj.filters
+++ b/niggainternal_fix_1_0.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="heccinhek\Glow.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="fmt\core.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="fmt\format.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="niggainternal_fix_1_0.cpp">
